fix linkedin link as well as try to fix boxes getting cut off on the right side of the screen

--- a/CSS/boxes.css
+++ b/CSS/boxes.css
@@ -5,7 +5,7 @@
     border: 2px solid #303446;
     font-size: 5vw;
     height: 100%;
-    width: 100%;
+    width: 90%;
     text-align: center;
 }
 
